--- a/Pokemon/styles.css
+++ b/Pokemon/styles.css
@@ -2,10 +2,48 @@ body {
     font-family: Arial, sans-serif;
     text-align: center;
     background-color: #f8f9fa;
+    margin: 0;
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.container {
-    margin-top: 50px;
+header{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px 0;
+    width: 100%;
+    box-shadow: 0px 2px 4px 0px rgba(148,142,148,1);
+}
+header img{
+    width: 100px;
+    margin-left: 20px;
+}
+nav ul{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    list-style: none;
+    margin-left: 100px;
+}
+nav ul li{
+    margin: 0 10px;
+}
+nav ul li a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    transition: 0.3s ease-in-out;
+}
+nav ul li a:hover{
+    color: #007bff;
+    cursor: pointer;
+    border-bottom: 2px solid #007bff;
+}
+.content {
 }
 
 input {
@@ -28,13 +66,13 @@ button:hover {
 }
 
 .pokemon-card {
-    margin-top: 40px;
     display: none;
+    width: 300px;
+    margin: 40px auto;
     padding: 20px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    display: inline-block;
 }
 
 .pokemon-card img {
