--- a/Pokemon/styles.css
+++ b/Pokemon/styles.css
@@ -82,3 +82,22 @@ button:hover {
 }
 .pokemon-card img:hover {
     transform: scale(1.5);}
+
+
+    /* Pokemonlist */
+
+.pokemon-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    justify-items: center;
+    gap: 20px;
+    padding: 20px;
+}
+.pokemon-card-list
+
+#loading {
+    display: none;
+    font-size: 18px;
+    color: gray;
+    margin: 20px;
+}
